Using html to create Functional Dependencies table :speech_balloon:

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -49,12 +49,25 @@ Specification of additional domains:
 
 To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished.
 
-| **Table R01** (UserTable)           |
-| ------------------------------------|
-| **Keys**: { idUser, username, email}|
-| **Functional Dependencies**         |
-| FD0101          | {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}|
-| **Normal Form** | BCNF              |
+<table>
+  <tr>
+    <th colspan="2">**Table R01** (UserTable)   </th>
+  </tr>
+  <tr>
+    <td colspan="2">**Keys**: { idUser, username, email}</td>
+  </tr>
+  <tr>
+    <td colspan="2">**Functional Dependencies** </td>
+  </tr>
+  <tr>
+    <td>FD0101</td>
+    <td>{idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}</td>
+  </tr>
+  <tr>
+    <td>**Normal Form**</td>
+    <td>BCNF</td>
+  </tr>
+</table>
 
 > If necessary, description of the changes necessary to convert the schema to BCNF.
 > Justification of the BCNF.
