--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -51,21 +51,35 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
 
 <table>
   <tr>
-    <th colspan="2">**Table R01** (UserTable)   </th>
+    <th colspan="2">
+      <b>Table R01</b> (UserTable)
+    </th>
   </tr>
   <tr>
-    <td colspan="2">**Keys**: { idUser, username, email}</td>
+    <td colspan="2">
+      <b>Keys</b>:{idUser, username, email}
+    </td>
   </tr>
   <tr>
-    <td colspan="2">**Functional Dependencies** </td>
+    <td colspan="2">
+      <b>Functional Dependencies</b>
+    </td>
   </tr>
   <tr>
-    <td>FD0101</td>
-    <td>{idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}</td>
+    <td>
+      FD0101
+    </td>
+    <td>
+      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+    </td>
   </tr>
   <tr>
-    <td>**Normal Form**</td>
-    <td>BCNF</td>
+    <td>
+      <b>Normal Form</b>
+    </td>
+    <td>
+      BCNF
+    </td>
   </tr>
 </table>
 
