Updated UML Diagram for A4 artifact :zap:

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -45,7 +45,7 @@ Specification of additional domains:
 
 ## 3. Functional Dependencies and schema validation
 
-> To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. Should it be necessary, in case the scheme is not in the Boyce–Codd Normal Form (BCNF), the relational schema is refined using normalization.
+<!-- > To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. Should it be necessary, in case the scheme is not in the Boyce–Codd Normal Form (BCNF), the relational schema is refined using normalization. -->
 
 To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished.
 
@@ -83,8 +83,8 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
 </table>
 
-> If necessary, description of the changes necessary to convert the schema to BCNF.
-> Justification of the BCNF.
+<!-- > If necessary, description of the changes necessary to convert the schema to BCNF.
+> Justification of the BCNF. -->
 
 ## 4. SQL Code
 
