--- a/artifacts/A4/A4.md
+++ b/artifacts/A4/A4.md
@@ -28,7 +28,7 @@ Changes made to the first submission:
 2. Added data types for all attributes.
 3. Improved readability.
 4. Removed both our subclasses for User and Task.
-5. Created association classes for when a Task or a Comment is edited.
+5. Created association class for when a Task is edited.
 6. Fixed some constraints (e.g. Made the name attribute of the Country class unique).
 7. Added some business rules (e.g. Close request).
 8. Removed Reply self-association, but kept the Comment self-association.
