--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -220,6 +220,7 @@ CREATE TABLE public.Joined(
 CREATE TABLE public.ForumPost(
 	idPost serial PRIMARY KEY,
 	creationDate timestamp NOT NULL,
+	lastEditDate timestamp,
 	title text NOT NULL,
 	content text NOT NULL,
 	idForum integer NOT NULL,
@@ -232,6 +233,7 @@ CREATE TABLE public.ForumPost(
 CREATE TABLE public.Reply(
 	idReply serial PRIMARY KEY,
 	creationDate timestamp NOT NULL,
+	lastEditDate timestamp,
 	content text NOT NULL,
 	idPost integer NOT NULL,
 	idUser integer NOT NULL,
@@ -243,6 +245,7 @@ CREATE TABLE public.Reply(
 CREATE TABLE public.Task(
 	idTask serial PRIMARY KEY,
 	creationDate timestamp NOT NULL,
+	lastEditDate timestamp,
 	title text NOT NULL,
 	description text,
 	deadline timestamp,
@@ -281,6 +284,7 @@ CREATE TABLE public.EditTaskInfo(
 CREATE TABLE public.Comment(
 	idComment serial PRIMARY KEY,
 	creationDate timestamp NOT NULL,
+	lastEditDate timestamp,
 	content TEXT NOT NULL,
 	idTask integer NOT NULL,
 	idUser integer NOT NULL,
