--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -82,6 +82,40 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
 </table>
 
+<table>
+  <tr>
+    <th colspan="2">
+      <b>Table R02</b> (Task)
+    </th>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <b>Keys</b>:{idTask, creationDate, title, description, deadline, completed, completedDate}
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <b>Functional Dependencies</b>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      FD0101
+    </td>
+    <td>
+      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <b>Normal Form</b>
+    </td>
+    <td>
+      BCNF
+    </td>
+  </tr>
+</table>
+
 <!-- > If necessary, description of the changes necessary to convert the schema to BCNF.
 > Justification of the BCNF. -->
 
