--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -11,14 +11,14 @@ Relation schemas are specified in the compact notation:
 | R01                | UserTable(<u>idUser</u>, username UK NN, password NN, email UK NN, premium NN, banned NN, name, gender, address,institution, description, birthDate, idCountry->Country) |
 | R02                | Task(<u>idTask</u>, creationDate NN, lastEditDate, title NN, description, deadline, completed NN, completedDate, idUser->UserTable, idProject->Project) |
 | R03                | Assigned(<u>idUser</u>->UserTable, <u>idTask</u>->Task) |
-| R04                | EditTaskInfo(<u>idUser</u>->UserTable, <u>idTask</u>->Task, editDate NN, oldTitle NN, oldDescription, oldDeadline) |
+| R04                | EditTaskInfo(<u>idUser</u>->UserTable, <u>idTask</u>->Task, editDate NN) |
 | R05                | CloseRequest(<u>idRequest</u>, creationDate NN, title NN, description, approved NN, idUser->UserTable, idTask->Task) |
 | R06                | Tag(<u>idTag</u>, name UK NN) |
 | R07                | Tagged(<u>idTask</u>->Task, <u>idTag</u>->Tag) |
 | R08                | Comment(<u>idComment</u>, creationDate NN, lastEditDate, content NN, idTask->Task, idUser->User) |
 | R09                | Thread(idParent->Comment, <u>idSon</u>->Comment) |
 | R10                | Project(<u>idProject</u>, creationDate NN, name NN, description, private NN, idForum->Forum UK) |
-| R11                | Joined(<u>idUser</u>->UserTable, <u>idProject</u>->Project, joinedDate NN, leftDate, role NN) |
+| R11                | Joined(<u>idUser</u>->UserTable, <u>idProject</u>->Project, joinedDate NN, role NN) |
 | R12                | PremiumSignature(<u>idPremium</u>, startDate NN, duration CK duration > 0 NN, idUser->User) |
 | R13                | ProjectForum(<u>idForum</u>) |
 | R14                | ForumPost(<u>idPost</u>, creationDate NN, lastEditDate, title NN, content NN, idForum->Project Forum, idUser->User) |
@@ -209,7 +209,6 @@ CREATE TABLE public.Joined(
 	idUser integer,
 	idProject integer,
 	joinedDate timestamp NOT NULL,
-	leftDate timestamp,
 	role Role NOT NULL,
 	PRIMARY KEY(idUser, idProject),
 	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
@@ -272,9 +271,6 @@ CREATE TABLE public.EditTaskInfo(
 	idUser integer,
 	idTask integer,
 	editDate timestamp NOT NULL,
-	oldTitle text NOT NULL,
-	oldDescription text,
-	oldDeadline timestamp,
 	PRIMARY KEY(idUser, idTask),
 	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
 	FOREIGN KEY(idTask) REFERENCES Task(idTask)
