functional dependencies :zap:

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -108,6 +108,14 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
+      FD0102
+    </td>
+    <td>
+      {idProject}->{creationDate, name, description, private, idForum}
+    </td>
+  </tr>
+  <tr>
+    <td>
       <b>Normal Form</b>
     </td>
     <td>
@@ -138,6 +146,14 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
     </td>
     <td>
       {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+    </td>
+  </tr>
+  <tr>
+    <td>
+      FD0102
+    </td>
+    <td>
+      {idTask}->{creationDate, title, description, deadline, completed, completedDate, idUser, idProject}
     </td>
   </tr>
   <tr>
@@ -176,6 +192,14 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
+      FD0102
+    </td>
+    <td>
+      {idTask}->{creationDate, title, description, deadline, completed, completedDate, idUser, idProject}
+    </td>
+  </tr>
+  <tr>
+    <td>
       <b>Normal Form</b>
     </td>
     <td>
@@ -210,6 +234,14 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
+      FD0102
+    </td>
+    <td>
+      {idTask}->{creationDate, title, description, deadline, completed, completedDate, idUser, idProject}
+    </td>
+  </tr>
+  <tr>
+    <td>
       <b>Normal Form</b>
     </td>
     <td>
@@ -232,14 +264,6 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   <tr>
     <td colspan="2">
       <b>Functional Dependencies</b>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      FD0101
-    </td>
-    <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
     </td>
   </tr>
   <tr>
@@ -273,7 +297,15 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD0101
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+      {idTask}->{creationDate, title, description, deadline, completed, completedDate, idUser, idProject}
+    </td>
+  </tr>
+  <tr>
+    <td>
+      FD0102
+    </td>
+    <td>
+      {idTag}->{name}
     </td>
   </tr>
   <tr>
@@ -289,7 +321,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
 <table>
   <tr>
     <th colspan="2">
-      <b>Table R08</b> (Commend)
+      <b>Table R08</b> (Comment)
     </th>
   </tr>
   <tr>
@@ -308,6 +340,14 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
     </td>
     <td>
       {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+    </td>
+  </tr>
+  <tr>
+    <td>
+      FD0102
+    </td>
+    <td>
+      {idTask}->{creationDate, title, description, deadline, completed, completedDate, idUser, idProject}
     </td>
   </tr>
   <tr>
@@ -341,7 +381,15 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD0101
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+      {idParent}->{creationDate, content, idTask, idUser}
+    </td>
+  </tr>
+  <tr>
+    <td>
+      FD0102
+    </td>
+    <td>
+      {idSon}->{creationDate, content, idTask, idUser}
     </td>
   </tr>
   <tr>
@@ -375,7 +423,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD0101
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+      {idForum}->{idForum}
     </td>
   </tr>
   <tr>
@@ -410,6 +458,14 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
     </td>
     <td>
       {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+    </td>
+  </tr>
+  <tr>
+  	<td>
+      FD0102
+    </td>
+    <td>
+      {idProject}->{creationDate, name, description, private, idForum}
     </td>
   </tr>
   <tr>
@@ -477,7 +533,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD0101
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+      {idForum}->{idForum}
     </td>
   </tr>
   <tr>
@@ -498,7 +554,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idPost, creationDate, content, idPost, idUser}
+      <b>Keys</b>:{idPost, creationDate, content, idForum, idUser}
     </td>
   </tr>
   <tr>
@@ -513,6 +569,14 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
     <td>
       {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
     </td>
+  </tr>
+  <tr>
+	<td>
+	FD0102
+	</td>
+	<td>
+	{idForum}->{idForum}
+	</td>
   </tr>
   <tr>
     <td>
@@ -549,6 +613,14 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
     </td>
   </tr>
   <tr>
+	<td>
+	 FD0102
+	</td>
+	<td>
+	{idPost}->{creationDate, content, idForum, idUser}
+	</td>
+  </tr>
+  <tr>
     <td>
       <b>Normal Form</b>
     </td>
@@ -577,14 +649,6 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
-    </td>
-    <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
-    </td>
-  </tr>
-  <tr>
-    <td>
       <b>Normal Form</b>
     </td>
     <td>
@@ -607,14 +671,6 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   <tr>
     <td colspan="2">
       <b>Functional Dependencies</b>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      FD0101
-    </td>
-    <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
     </td>
   </tr>
   <tr>
@@ -649,6 +705,14 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
     </td>
     <td>
       {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+    </td>
+  </tr>
+  <tr>
+    <td>
+      FD0102
+    </td>
+    <td>
+      {idAdmin}->{username, password, email}
     </td>
   </tr>
   <tr>
