Working on Functional Dependencies :pencil2:

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -66,10 +66,26 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
+      FD0102
+    </td>
+    <td>
+      {username}->{idUser, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+    </td>
+  </tr>
+  <tr>
+    <td>
       FD0101
     </td>
     <td>
       {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+    </td>
+  </tr>
+  <tr>
+    <td>
+      FD0103
+    </td>
+    <td>
+      {email}->{idUser, username, password, premium, banned, name, gender, address, institution, description, birthDate}
     </td>
   </tr>
   <tr>
@@ -90,7 +106,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idTask, creationDate, title, description, deadline, completed, completedDate, idUser, idProject}
+      <b>Keys</b>:{idTask}
     </td>
   </tr>
   <tr>
@@ -100,18 +116,10 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD0201
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
-    </td>
-  </tr>
-  <tr>
-    <td>
-      FD0102
-    </td>
-    <td>
-      {idProject}->{creationDate, name, description, private, idForum}
+      {idTask}->{creationDate, lastEditDate, title, description, deadline, completed, completedDate}
     </td>
   </tr>
   <tr>
@@ -132,7 +140,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idUser, idTask}
+      <b>Keys</b>:{(idUser, idTask)}
     </td>
   </tr>
   <tr>
@@ -142,18 +150,10 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD0301
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
-    </td>
-  </tr>
-  <tr>
-    <td>
-      FD0102
-    </td>
-    <td>
-      {idTask}->{creationDate, title, description, deadline, completed, completedDate, idUser, idProject}
+      {(idUser, idTask)}->{}
     </td>
   </tr>
   <tr>
@@ -174,7 +174,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idUser, idTask, editDate, oldTitle, oldDescription, oldDeadline}
+      <b>Keys</b>:{(idUser, idTask)}
     </td>
   </tr>
   <tr>
@@ -184,18 +184,10 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD0401
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
-    </td>
-  </tr>
-  <tr>
-    <td>
-      FD0102
-    </td>
-    <td>
-      {idTask}->{creationDate, title, description, deadline, completed, completedDate, idUser, idProject}
+      {(idUser, idTask)}->{editDate}
     </td>
   </tr>
   <tr>
@@ -216,7 +208,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idRequest, creationDate, title, description, approved, idUser, idTask}
+      <b>Keys</b>:{idRequest}
     </td>
   </tr>
   <tr>
@@ -226,18 +218,10 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD0501
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
-    </td>
-  </tr>
-  <tr>
-    <td>
-      FD0102
-    </td>
-    <td>
-      {idTask}->{creationDate, title, description, deadline, completed, completedDate, idUser, idProject}
+      {idRequest}->{creationDate, title, description, approved}
     </td>
   </tr>
   <tr>
@@ -268,6 +252,22 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
+      FD0601
+    </td>
+    <td>
+      {idTag}->{name}
+    </td>
+  </tr>
+  <tr>
+  <td>
+    FD0602
+  </td>
+  <td>
+    {name}->{idTag}
+  </td>
+  </tr>
+  <tr>
+    <td>
       <b>Normal Form</b>
     </td>
     <td>
@@ -284,7 +284,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idTask, idTag}
+      <b>Keys</b>:{(idTask, idTag)}
     </td>
   </tr>
   <tr>
@@ -294,18 +294,10 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD0701
     </td>
     <td>
-      {idTask}->{creationDate, title, description, deadline, completed, completedDate, idUser, idProject}
-    </td>
-  </tr>
-  <tr>
-    <td>
-      FD0102
-    </td>
-    <td>
-      {idTag}->{name}
+      {(idTask, idTag)}->{}
     </td>
   </tr>
   <tr>
@@ -326,7 +318,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idComment, creationDate, content, idTask, idUser}
+      <b>Keys</b>:{idComment}
     </td>
   </tr>
   <tr>
@@ -336,18 +328,10 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD0801
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
-    </td>
-  </tr>
-  <tr>
-    <td>
-      FD0102
-    </td>
-    <td>
-      {idTask}->{creationDate, title, description, deadline, completed, completedDate, idUser, idProject}
+      {idComment}->{reationDate, lastEditDate, content}
     </td>
   </tr>
   <tr>
@@ -368,7 +352,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idParent, idSon}
+      <b>Keys</b>:{idSon}
     </td>
   </tr>
   <tr>
@@ -378,18 +362,10 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD0901
     </td>
     <td>
-      {idParent}->{creationDate, content, idTask, idUser}
-    </td>
-  </tr>
-  <tr>
-    <td>
-      FD0102
-    </td>
-    <td>
-      {idSon}->{creationDate, content, idTask, idUser}
+      {idSon}->{idParent}
     </td>
   </tr>
   <tr>
@@ -410,7 +386,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idProject, creationDate, name, description, private, idForum}
+      <b>Keys</b>:{idProject}
     </td>
   </tr>
   <tr>
@@ -420,10 +396,10 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD1001
     </td>
     <td>
-      {idForum}->{idForum}
+      {idProject}->{creationDate, name, description, private}
     </td>
   </tr>
   <tr>
@@ -444,7 +420,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idUser, idProject, joinedDate, role}
+      <b>Keys</b>:{(idUser, idProject)}
     </td>
   </tr>
   <tr>
@@ -454,18 +430,10 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD1101
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
-    </td>
-  </tr>
-  <tr>
-  	<td>
-      FD0102
-    </td>
-    <td>
-      {idProject}->{creationDate, name, description, private, idForum}
+      {(idUser, idProject)}->{joinedDate, role}
     </td>
   </tr>
   <tr>
@@ -486,7 +454,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idPremium, startDate, duration, idUser}
+      <b>Keys</b>:{idPremium}
     </td>
   </tr>
   <tr>
@@ -496,10 +464,10 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD1201
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+      {idPremium}->{startDate, duration, idUser}
     </td>
   </tr>
   <tr>
@@ -530,10 +498,10 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD1301
     </td>
     <td>
-      {idForum}->{idForum}
+      {idForum}->{}
     </td>
   </tr>
   <tr>
@@ -554,7 +522,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idPost, creationDate, content, idForum, idUser}
+      <b>Keys</b>:{idPost}
     </td>
   </tr>
   <tr>
@@ -564,19 +532,11 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD1401
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+      {idPost}->{, creationDate, content}
     </td>
-  </tr>
-  <tr>
-	<td>
-	FD0102
-	</td>
-	<td>
-	{idForum}->{idForum}
-	</td>
   </tr>
   <tr>
     <td>
@@ -596,7 +556,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idReply, creationDate, content, idPost, idUser}
+      <b>Keys</b>:{idReply}
     </td>
   </tr>
   <tr>
@@ -606,19 +566,11 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD1501
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+      {idReply}->{creationDate, content}
     </td>
-  </tr>
-  <tr>
-	<td>
-	 FD0102
-	</td>
-	<td>
-	{idPost}->{creationDate, content, idForum, idUser}
-	</td>
   </tr>
   <tr>
     <td>
@@ -629,7 +581,6 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
     </td>
   </tr>
 </table>
-
 
 <table>
   <tr>
@@ -645,6 +596,22 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   <tr>
     <td colspan="2">
       <b>Functional Dependencies</b>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      FD1601
+    </td>
+    <td>
+      {name}->{idCountry}
+    </td>
+  </tr>
+  <tr>
+    <td>
+      FD1602
+    </td>
+    <td>
+      {idCountry}->{name}
     </td>
   </tr>
   <tr>
@@ -665,12 +632,36 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idAdmin, username, password, email}
+      <b>Keys</b>:{idAdmin, username, email}
     </td>
   </tr>
   <tr>
     <td colspan="2">
       <b>Functional Dependencies</b>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      FD1701
+    </td>
+    <td>
+      {idAdmin}->{username, password, email}
+    </td>
+  </tr>
+  <tr>
+    <td>
+      FD1702
+    </td>
+    <td>
+      {username}->{idAdmin, password, email}
+    </td>
+  </tr>
+  <tr>
+    <td>
+      FD1703
+    </td>
+    <td>
+      {email}->{idAdmin, username, password}
     </td>
   </tr>
   <tr>
@@ -691,7 +682,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idBan, startDate, duration, motive, idUser, idAdmin}
+      <b>Keys</b>:{idBan}
     </td>
   </tr>
   <tr>
@@ -701,18 +692,10 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0101
+      FD1801
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
-    </td>
-  </tr>
-  <tr>
-    <td>
-      FD0102
-    </td>
-    <td>
-      {idAdmin}->{username, password, email}
+      {idBan}-> startDate, duration, motive}
     </td>
   </tr>
   <tr>
