Functional Dependencies :trophy:

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -44,8 +44,6 @@ Specification of additional domains:
 
 ## 3. Functional Dependencies and schema validation
 
-<!-- > To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. Should it be necessary, in case the scheme is not in the Boyce–Codd Normal Form (BCNF), the relational schema is refined using normalization. -->
-
 To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished.
 
 <table>
@@ -66,18 +64,18 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td>
-      FD0102
+      FD0101
     </td>
     <td>
-      {username}->{idUser, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate, idCountry}
     </td>
   </tr>
   <tr>
     <td>
-      FD0101
+      FD0102
     </td>
     <td>
-      {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}
+      {username}->{idUser, password, email, premium, banned, name, gender, address, institution, description, birthDate, idCountry}
     </td>
   </tr>
   <tr>
@@ -85,7 +83,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD0103
     </td>
     <td>
-      {email}->{idUser, username, password, premium, banned, name, gender, address, institution, description, birthDate}
+      {email}->{idUser, username, password, premium, banned, name, gender, address, institution, description, birthDate, idCountry}
     </td>
   </tr>
   <tr>
@@ -119,7 +117,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD0201
     </td>
     <td>
-      {idTask}->{creationDate, lastEditDate, title, description, deadline, completed, completedDate}
+      {idTask}->{creationDate, lastEditDate, title, description, deadline, completed, completedDate, idUser, idProject}
     </td>
   </tr>
   <tr>
@@ -149,11 +147,8 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
     </td>
   </tr>
   <tr>
-    <td>
-      FD0301
-    </td>
-    <td>
-      {(idUser, idTask)}->{}
+    <td colspan="2">
+      (none)
     </td>
   </tr>
   <tr>
@@ -221,7 +216,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD0501
     </td>
     <td>
-      {idRequest}->{creationDate, title, description, approved}
+      {idRequest}->{creationDate, title, description, approved, idUser, idTask}
     </td>
   </tr>
   <tr>
@@ -293,11 +288,8 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
     </td>
   </tr>
   <tr>
-    <td>
-      FD0701
-    </td>
-    <td>
-      {(idTask, idTag)}->{}
+    <td colspan="2">
+      (none)
     </td>
   </tr>
   <tr>
@@ -331,7 +323,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD0801
     </td>
     <td>
-      {idComment}->{reationDate, lastEditDate, content}
+      {idComment}->{creationDate, lastEditDate, content, idTask, idUser}
     </td>
   </tr>
   <tr>
@@ -386,7 +378,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
   <tr>
     <td colspan="2">
-      <b>Keys</b>:{idProject}
+      <b>Keys</b>:{idProject, idForum}
     </td>
   </tr>
   <tr>
@@ -399,7 +391,15 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD1001
     </td>
     <td>
-      {idProject}->{creationDate, name, description, private}
+      {idProject}->{creationDate, name, description, private, idForum}
+    </td>
+  </tr>
+  <tr>
+    <td>
+      FD1002
+    </td>
+    <td>
+      {idForum}->{idProject, creationDate, name, description, private}
     </td>
   </tr>
   <tr>
@@ -497,11 +497,8 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
     </td>
   </tr>
   <tr>
-    <td>
-      FD1301
-    </td>
-    <td>
-      {idForum}->{}
+    <td colspan="2">
+      (none)
     </td>
   </tr>
   <tr>
@@ -535,7 +532,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD1401
     </td>
     <td>
-      {idPost}->{, creationDate, content}
+      {idPost}->{creationDate, lastEditDate, title, content, idForum, idUser}
     </td>
   </tr>
   <tr>
@@ -569,7 +566,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD1501
     </td>
     <td>
-      {idReply}->{creationDate, content}
+      {idReply}->{creationDate, lastEditDate, title, content, idPost, idUser}
     </td>
   </tr>
   <tr>
@@ -695,7 +692,7 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
       FD1801
     </td>
     <td>
-      {idBan}-> startDate, duration, motive}
+      {idBan}->{startDate, duration, motive, idUser, idAdmin}
     </td>
   </tr>
   <tr>
@@ -707,9 +704,6 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
     </td>
   </tr>
 </table>
-
-<!-- > If necessary, description of the changes necessary to convert the schema to BCNF.
-> Justification of the BCNF. -->
 
 ## 4. SQL Code
 
