--- a/artifacts/A6/A6.md
+++ b/artifacts/A6/A6.md
@@ -61,19 +61,44 @@
 ### 2.2. Full-text Search Indices
 
 > The system being developed must provide full-text search features supported by PostgreSQL. Thus, it is necessary to specify the fields where full-text search will be available and the associated setup, namely all necessary configurations, indexes definitions and other relevant details.
- 
-| Index reference | IDX01                                  |
-| Related queries | SELECT01, ...                          |
-| Index relation  | Relation where the index is applied    |
-| Index attribute | Attribute where the index is applied   |
-| Index type      | B-tree, Hash, GiST or GIN              |
-| Clustering      | Clustering of the index                |
-| --------------- | -------------------------------------- |
-| Justification   | Justification for the proposed index   |
-| --------------- | -------------------------------------- |
-| SQL code                                                 |
- 
- 
+
+<table>
+<tbody>
+<tr>
+<td><b>Index reference<b></td>
+<td>IDX01</td>
+</tr>
+<tr>
+<td><b>Related queries</b></td>
+<td>SELECT01, ... </td>
+</tr>
+<tr>
+<td><b>Index relation</b></td>
+<td>Relation where the index is applied</td>
+</tr>
+<tr>
+<td><b>Index attribute</b></td>
+<td>Attribute where the index is applied</td>
+</tr>
+<tr>
+<td><b>Index type</b></td>
+<td>B-tree, Hash, GiST or GIN</td>
+</tr>
+<tr>
+<td><b>Clustering</b></td>
+<td>Clustering of the index</td>
+</tr>
+<tr>
+<td><b>Justification</b></td>
+<td>Justification for the proposed index</td>
+</tr>
+<tr>
+<td><b>SQL code</b></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+
 ## 3. Triggers
  
 > User-defined functions and trigger procedures that add control structures to the SQL language or perform complex computations, are identified and described to be trusted by the database server. Every kind of function (SQL functions, Stored procedures, Trigger procedures) can take base types, composite types, or combinations of these as arguments (parameters). In addition, every kind of function can return a base type or a composite type. Functions can also be defined to return sets of base or composite values.
@@ -100,5 +125,7 @@ Changes made to the first submission:
  
 GROUP17xx, xx/xx/2018
  
-> Group member 1 name, email
-> Group member 2 name, email
+> Mateus Pedroza Cortes Marques, up201601876@fe.up.pt
+> Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt
+> João Pedro Teixeira Pereira de Sá, up201506252@fe.up.pt
+> Mário Rui Macedo Flores dos Santos, up201503406@fe.up.pt
