fixing stuff on artifacts, updated sql :pencil2:

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -15,17 +15,16 @@ Relation schemas are specified in the compact notation:
 | R05                | CloseRequest(<u>idRequest</u>, creationDate NN, title NN, description, approved NN, idUser->UserTable, idTask->Task) |
 | R06                | Tag(<u>idTag</u>, name UK NN) |
 | R07                | Tagged(<u>idTask</u>->Task, <u>idTag</u>->Tag) |
-| R08                | Comment(<u>idComment</u>, creationDate NN, lastEditDate, content NN, idTask->Task, idUser->User) |
-| R09                | Thread(idParent->Comment, <u>idSon</u>->Comment) |
-| R10                | Project(<u>idProject</u>, creationDate NN, name NN, description, private NN, idForum->Forum UK) |
-| R11                | Joined(<u>idUser</u>->UserTable, <u>idProject</u>->Project, joinedDate NN, role NN) |
-| R12                | PremiumSignature(<u>idPremium</u>, startDate NN, duration CK duration > 0 NN, idUser->User) |
-| R13                | ProjectForum(<u>idForum</u>) |
-| R14                | ForumPost(<u>idPost</u>, creationDate NN, lastEditDate, title NN, content NN, idForum->Project Forum, idUser->User) |
-| R15                | Reply(<u>idReply</u>, creationDate NN, lastEditDate, content NN, idPost->ForumPost, idUser->User) |
-| R16                | Country(<u>idCountry</u>, name UK NN) |
-| R17                | Admin(<u>idAdmin</u> , username UK NN, password NN, email UK NN) |
-| R18                | BannedRecord(<u>idBan</u>, startDate NN, duration CK duration > interval '0', motive, idUser->UserTable, idAdmin->Admin) |
+| R08                | Comment(<u>idComment</u>, creationDate NN, lastEditDate, content NN, idTask->Task, idUser->User, idComment->Comment) |
+| R09                | Project(<u>idProject</u>, creationDate NN, name NN, description, private NN, idForum->Forum UK) |
+| R10                | Joined(<u>idUser</u>->UserTable, <u>idProject</u>->Project, joinedDate NN, role NN) |
+| R11                | PremiumSignature(<u>idPremium</u>, startDate NN, duration CK duration > 0 NN, idUser->User) |
+| R12                | ProjectForum(<u>idForum</u>) |
+| R13                | ForumPost(<u>idPost</u>, creationDate NN, lastEditDate, title NN, content NN, idForum->Project Forum, idUser->User) |
+| R14                | Reply(<u>idReply</u>, creationDate NN, lastEditDate, content NN, idPost->ForumPost, idUser->User) |
+| R15                | Country(<u>idCountry</u>, name UK NN) |
+| R16                | Admin(<u>idAdmin</u> , username UK NN, password NN, email UK NN) |
+| R17                | BannedRecord(<u>idBan</u>, startDate NN, duration CK duration > interval '0', motive, idUser->UserTable, idAdmin->Admin) |
 
 <!--
 UK - UNIQUE
@@ -705,7 +704,11 @@ To validate the Relational Schema obtained from the Conceptual Model, all functi
   </tr>
 </table>
 
+//TODO: esta em bcnf
+
 ## 4. SQL Code
+
+//TODO: USE schema
 
 ```SQL
 DROP SCHEMA IF EXISTS public CASCADE;
